@@ -105,6 +105,7 @@ Other changes:
  - gui: removed uiobject::get_apparent_width/height and added uiobject::get_apparent_dimensions()
  - gui: removed uiobject::set_newly_created/is_newly_created (no longer necessary)
  - gui: removed manager::is_loading_ui() (no longer necessary)
+ - gui: removed manager::begin() and end()
  - gui: edit_box::set_text_insets now takes a single bounds2f argument
  - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
  - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
